--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -1,4 +1,4 @@
-<% if @shortlist_time == 'open' && !ShortList.exists?(mentee_id: current_user.id) %>
+<% if @shortlist_time == 'open' && !ShortList.exists?(mentee_id: current_user.id) && !current_user.matched? %>
   <div class="desktop-view">
     <%= render 'mentee_shortlist_desktop', mentors_data: mentors_data %>
   </div>
