update: add progress to dashboard

--- a/app/views/dashboard/_meetings_card.html.erb
+++ b/app/views/dashboard/_meetings_card.html.erb
@@ -2,24 +2,27 @@
   <div class="flex justify-between">
     <h1 class="text-2xl font-semibold text-[#202020] mb-2"> Meetings </h1>
     <div class="flex items-center gap-1">
-      <p class="text-sm font-medium text-[#202020] bg-[#EEF6F8] rounded-sm py-0.5 px-1 h-[1.5rem]">33%</p>
+      <p class="text-sm font-medium text-[#202020] bg-[#EEF6F8] rounded-sm py-0.5 px-1 h-[1.5rem]"><%= @progress %>
+        %</p>
       <p class="text-[0.8rem] font-regular">Achieved</p>
     </div>
   </div>
   <div class="flex flex-col gap-3 items-center">
-    <p class="text-[#202020] font-medium text-[0.9rem]">You’re moving smoothly! Already a third of the way there. 🚀</p>
+    <p class="text-[#202020] font-medium text-[0.9rem]"><%= progress_message(@progress) %></p>
     <div class="flex items-center">
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">1</div>
-      <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">2</div>
-      <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">3</div>
-      <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">4</div>
-      <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">5</div>
-      <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">6</div>
+      <% @required_meetings_count.times do |index| %>
+        <div class="w-[3rem] h-[3rem] rounded-[2rem]
+        <%= 'bg-[#B3B3B3] text-white' if index < @past_meeting_count %>
+        <%= 'bg-[#E1E1E1] text-[#202020]' if index >= @past_meeting_count %>
+        font-medium flex items-center justify-center
+        hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">
+          <%= index + 1 %>
+        </div>
+
+        <% if index < @required_meetings_count - 1 %>
+          <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
+        <% end %>
+      <% end %>
     </div>
   </div>
   <div class="flex flex-col gap-1.5 mt-5">
@@ -29,7 +32,9 @@
           <div class="w-[2rem] h-[2rem] rounded-[2rem] bg-[#F7F5F4] flex items-center justify-center">
             <img src="<%= asset_path("icon/calendar_outline.svg") %>" alt="calender" class="h-[1rem] w-[1rem]">
           </div>
-          <p class="text-[#202020] font-medium text-[0.9rem]"><span class="font-semibold">4</span> meetings are not scheduled yet</p>
+          <p class="text-[#202020] font-medium text-[0.9rem]">
+            <span class="font-semibold"><%= @required_meetings_count - @meetings.count %></span> meetings are not
+            scheduled yet</p>
         </div>
         <a href="/" class="text-[#898989] font-regular text-[0.85rem] underline">Take Action</a>
       </div>
@@ -40,9 +45,14 @@
           <div class="w-[2rem] h-[2rem] rounded-[2rem] bg-[#F7F5F4] flex items-center justify-center">
             <img src="<%= asset_path("icon/2_user.svg") %>" alt="2_user" class="h-[1rem] w-[1rem]">
           </div>
-          <p class="text-[#202020] font-medium text-[0.9rem]">Upcoming meeting is <span class="font-semibold">5</span> days away</p>
+          <% if (@upcoming_meeting.date - Date.today).to_i == 0 %>
+            <p class="text-[#202020] font-medium text-[0.9rem]"> You have a meeting today!
+          <% else %>
+            <p class="text-[#202020] font-medium text-[0.9rem]">Upcoming meeting is
+              <span class="font-semibold"> <%= (@upcoming_meeting.date - Date.today).to_i %> </span> days away</p>
+          <% end %>
         </div>
-        <a href="/" class="text-[#898989] font-regular text-[0.85rem] underline">Take Action</a>
+        <%= link_to 'Take Action',  meetings_path, class:"text-[#898989] font-regular text-[0.85rem] underline"%>
       </div>
     </div>
   </div>
