--- a/app/views/meetings/_crud_modal.html.erb
+++ b/app/views/meetings/_crud_modal.html.erb
@@ -1,6 +1,6 @@
-<!-- crudModal.html -->
-<div id="crud-modal" tabindex="-1" aria-hidden="true" class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<div id="crud-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
   <div class="relative p-4 w-full max-w-md max-h-full">
+    <!-- Modal content -->
     <div class="relative bg-white rounded-lg shadow dark:bg-[#676666]">
       <!-- Modal header -->
       <div class="flex items-center justify-between px-6 pt-6 md:px-6 md:pt-6 rounded-t dark:border-[#898989]">
