--- a/app/views/meetings/_meeting_table.html.erb
+++ b/app/views/meetings/_meeting_table.html.erb
@@ -37,12 +37,12 @@
       <td class="px-6 py-2"><%= meeting.date.strftime('%a, %b %d, %Y') %></td>
       <td class="px-6 py-2"><%= meeting.time.strftime('%I:%M %p') %></td>
       <td class="px-6 py-2">
-        <span class="text-blue-500">
-          <a href="<%= meeting.location %>">Online</a>
+        <span class="text-[#202020] hover:text-[#F9837C]">
+          <a href="<%= meeting.location %>">Online</a> // TODO
         </span>
       </td>
       <td class="px-6 py-2">
-        <a href="#" type="button" data-modal-target="viewNoteModal" data-modal-show="viewNoteModal" data-meeting-id="<%= meeting.id %>" data-meeting-notes="<%= meeting.notes %>" class="font-medium text-[#898989] dark:text-[#898989] hover:underline">
+        <a href="#" type="button" data-modal-target="viewNoteModal" data-modal-show="viewNoteModal" data-meeting-id="<%= meeting.id %>" data-meeting-notes="<%= meeting.notes %>" class="font-medium text-[#898989] hover:underline">
           <img src=<%= asset_path('icon/note.svg') %> alt="note" class="h-4">
         </a>
       </td>
