--- a/app/views/meetings/_meeting_table.html.erb
+++ b/app/views/meetings/_meeting_table.html.erb
@@ -38,7 +38,8 @@
       <td class="px-6 py-2"><%= meeting.time.strftime('%I:%M %p') %></td>
       <td class="px-6 py-2">
         <span class="text-[#202020] hover:text-[#F9837C]">
-          <a href="<%= meeting.location %>">Online</a> // TODO
+          <!--TODO: location typing not store in database-->
+          <a href="<%= meeting.location %>">Online</a>
         </span>
       </td>
       <td class="px-6 py-2">
