testing to see if the mailers are working correctly

--- a/app/views/cohort_mailer/shortlist_start_notification.html.erb
+++ b/app/views/cohort_mailer/shortlist_start_notification.html.erb
@@ -1,5 +1,5 @@
 <h1>Hi <%= @user.first_name %></h1>
 
-<p>Your cohort <%= @cohort.name %> shortlist is starting! </p>
+<p>Your cohort <%= @cohort.cohort_name %> shortlist is starting! </p>
 
 <p>MentE</p>
