--- a/app/views/cohort_mailer/two_week_warning.html.erb
+++ b/app/views/cohort_mailer/two_week_warning.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @Admin.first_name %></h1>
 
-<p>Cohort <%= @cohort.name %> matching complete!</p>
+<p>Cohort <%= @cohort.cohort_name %> matching complete!</p>
 
 <p>MentE</p>
