--- a/app/views/cohort_mailer/unmatched_notification.html.erb
+++ b/app/views/cohort_mailer/unmatched_notification.html.erb
@@ -1,5 +1,5 @@
 <h1>Hi <%= @user.first_name %></h1>
 
-<p>Pick new shortlist for <%= @cohort.name %>!</p>
+<p>Pick new shortlist for <%= @cohort.cohort_name %>!</p>
 
 <p>MentE</p>
