--- a/app/views/cohort_mailer/matching_complete_notification.html.erb
+++ b/app/views/cohort_mailer/matching_complete_notification.html.erb
@@ -1,5 +1,5 @@
 <h1>Hi Admin</h1>
 
-<p>Cohort <%= @cohort.name %> is ending in 2 weeks!</p>
+<p>Cohort <%= @cohort.cohort_name %> is ending in 2 weeks!</p>
 
 <p>MentE</p>
