--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -8,7 +8,6 @@
     </div>
   </div>
   <!-- Program and DPI text -->
-
   <!-- Sidebar Links with Hover Effect -->
   <div class="text-sm">
     <div class="mb-4">
@@ -17,14 +16,10 @@
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
           <i class="fas fa-th-large mr-2"></i> Overview
         </li>
+        <!-- New Cohorts Button -->
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
-          <button 
-            id="openModalBtn" 
-            class="text-black flex items-center"
-            onclick="openModal('program-list-modal')"
-          >
-            <i class="fas fa-folder-open mr-2"></i> Cohorts
-          </button>
+          <i class="fas fa-layer-group mr-2"></i>
+          <%= link_to "Cohorts", program_cohorts_path(@current_program.id), class: "text-black" %>
         </li>
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
           <i class="fas fa-envelope mr-2"></i> Message 
@@ -93,12 +88,17 @@
     >
       <i class="fas fa-times"></i>
     </button>
-    <h1 class="font-medium mb-1">Programs:</h1>
+    <h1 class="font-medium mb-1">Cohorts:</h1>
     <ul class="mt-2 space-y-2">
       <% @programs_by_admin.each do |program| %>
-        <li>
-          <button onclick="window.location.href='/dashboard/admin/<%= program.id %>'" class="text-sm text-black-500 ml-5"><%= program.name %></button>
+        <% program.cohorts.each do |cohort| %>
           <li>
+            <%= cohort.cohort_name %>
+            <%= cohort.description %>
+            <%= cohort.start_date %>
+            <%= cohort.end_date %>
+            <li>
+            <% end %>
           <% end %>
         </ul>
       </div>
