--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -36,7 +36,7 @@
                 <div class="flex space-x-4">
                   <%= link_to "View", cohort_members_path(cohort_id: cohort.id), class: "text-blue-600 hover:text-blue-800 font-medium px-3 py-1 bg-blue-50 rounded-md shadow-sm hover:bg-blue-100" %>
                   <%= link_to "Edit", edit_cohort_path(cohort), class: "text-yellow-600 hover:text-yellow-800 font-medium px-3 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100" %>
-                  <%= link_to "Delete", @cohort, method: :delete, data: { confirm: "Are you sure?" }, class: "text-red-600 hover:text-red-800 font-medium px-3 py-1 bg-red-50 rounded-md shadow-sm hover:bg-red-100" %>
+                  <%= button_to "Delete", cohort, method: :delete, data: { confirm: "Are you sure?" }, class: "text-red-600 hover:text-red-800 font-medium px-3 py-1 bg-red-50 rounded-md shadow-sm hover:bg-red-100" %>
                 </div>
               </td>
             </tr>
