--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -18,7 +18,7 @@
         </li>
         <!-- New Cohorts Button -->
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
-          <i class="fas fa-layer-group mr-2"></i>
+          <i class="fas fa-folder-open mr-2"></i>
           <%= link_to "Cohorts", program_cohorts_path(@current_program.id), class: "text-black" %>
         </li>
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
